Update API for session addlogs to match with mobile client, update OpenAPI document
